Modified the POST methods to update relations.